# malt-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_TEMPLATE.md  manifest.json  pyproject.toml  server.json
.claude/rules/: dev-workflow.md
.github/workflows/: ci.yml  release.yml
malt_mcp_server/: __init__.py  __main__.py  bootstrap.py  cli.py  constants.py  server.py
malt_mcp_server/core/: auth.py  browser.py  exceptions.py
malt_mcp_server/scraping/: _helpers.py  mission_details.py  missions.py  profile.py  stats.py
malt_mcp_server/tools/: mission_details.py  missions.py  profile.py  session.py  stats.py
tests/test_scraping/: test_profile.py
