[project]
name = "malt-mcp"
version = "0.1.0"
description = "MCP server for Malt.fr — manage your freelance profile, stats, missions, and availability through AI assistants."
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [
    { name = "Leonidas Jeremy", email = "leonidas@tryhard.be" }
]
license = {file = "LICENSE"}
keywords = [
    "malt",
    "mcp",
    "model-context-protocol",
    "freelance",
    "ai",
    "automation",
    "llm",
    "anthropic",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=3.0.0",
    "patchright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/LeoMbm/malt-mcp-server"
Documentation = "https://github.com/LeoMbm/malt-mcp-server#readme"
Repository = "https://github.com/LeoMbm/malt-mcp-server"
Issues = "https://github.com/LeoMbm/malt-mcp-server/issues"
Changelog = "https://github.com/LeoMbm/malt-mcp-server/releases"

[project.scripts]
malt-mcp = "malt_mcp_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["malt_mcp_server"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a12",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ty]
python-version = "3.12"
